final editing css

--- a/public html/13. Tirta Sari Legong.html
+++ b/public html/13. Tirta Sari Legong.html
@@ -14,11 +14,11 @@
     <nav role="navigation" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="introduction.html" class="navbar-brand">Wisata Ubud Bali</a>
         </div>
         <div id="presentation-chooser" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 1<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
                 <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
@@ -30,9 +30,22 @@
                 <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
                 <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
                 <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 2<b class="caret"></b></a>
+              <ul class="dropdown-menu">
                 <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
                 <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
-                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong </a></li>
+                <li><a href="14. Museum Puri Lukisan Ubud.html">Museum Puri Lukisan Ubud</a></li>
+                <li><a href="15. Pura Gunung Lebah.html">Pura Gunung Lebah</a></li>
+                <li><a href="16. Museum Neka Ubud Bali.html">Museum Neka Ubud Bali</a></li>
+                <li><a href="17. Museum Blanco Ubud.html">Museum Blanco Ubud</a></li>
+                <li><a href="18. Legong Mahabharata.html">Legong Mahabharata</a></li>
+                <li><a href="19. Yeh Pulu Relief.html">Yeh Pulu Relief</a></li>
+                <li><a href="20. Tari Barong Ubud.html">Tari Barong Ubud</a></li>
               </ul>
             </li>
           </ul>
@@ -40,33 +53,33 @@
       </div>
     </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h1>Tirta Sari Legong</h1><img src="images/TSL.jpg" height="300" width="600">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+      <section>       
         <p>Tempat wisata di Ubud Bali sangat terkenal sampai ke mancanegara, karena seni dan budayanya. Baik seni lukis, seni musik gambelan Bali dan seni tari Bali. Di Bali ada 3 jenis tari Bali yang menjadi favorit wisatawan saat berlibur. Seni tari tersebut antara lain, tari Barong, tari kecak dan tari Legong. Dihalaman ini, saya khusus menuliskan untuk pembaca, tentang seni tari Legong Tirtasari atau Tirta Sari Legong</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Salah satu objek wisata di Bali terbaik untuk menonton seni tari klasik Bali seperti tari Legong adalah Ubud. Di Ubud ada banyak tempat yang mementaskan seni tari Legong Bali dan yang terbaik menurut saya pribadi adalah pementasan grup tari Tirta Sari.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/TSL1.jpg" class="big">
+      <section><img src="images/TSL1.jpg" class="big">
         <h3>Sejarah Grup Tari Tirta Sari Peliatan Ubud</h3>
         <p> Grup tari Tirta Sari dibentuk pada tahun 1978 oleh Anak Agung Gde Mandera, yang berasal dari Puri Kaleran Peliatan Ubud. Tujuan awal dari Anak Agung Gde Mandera membentuk group tari Tirta Sari, adalah untuk melestarikan seni tari Bali dan seni musik klasik yang ada di Peliatan Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Awal cerita terbentuknya gup tari Tirta Sari, saat Anak Agung Gde Mandera memanggil guru seniman musik klasik di daerah Peliatan Ubud, yang bernama I Made Lebah, untuk mementaskan pertunjukan tari Barong, pertunjukan tari Barong ini ini diberi nama Barong Bebekah.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <P>Lambat laun grup tari Tirta Sari mulai berkembang dengan menyempurnakan musik klasik khas Bali. Guruh Soekarno Putra pada tahun 1982, mengajak grup Tirta Sari untuk berkolaborasi dengan kelompok tari Swara Marhardika dan memadukan musik klasik Bali dengan musik kontemporer. Perpaduan antara kelompok tari Tirta Sari dengan kelompok tari Swara Marhardika,  dipentaskan pertama kali untuk upacara pembukaan Jakarta Fair.</P>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <P>Semenjak itu, kelompok tari Tirta Sari, mulai dikenal dan selalu diminta untuk mengadakan pertunjukan tari di tingkat resmi negara dan kegiatan sosial. Saat ini kelompok tari Tirta Sari, dipimpin oleh Anak Agung Gde Oka Dalem, secara rutin mengadakan pertunjukan seni tari klasik Bali untuk para wisatawan yang ingin menonton tari klasik Bali.</P>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/TSL2.jpg" class="big">
+      <section><img src="images/TSL2.jpg" class="big">
         <h3>Kelompok Legong Lasem Tirta Sari</h3>
         <p> Kelompok tari Tirta Sari juga dikenal dengan nama Legong Lasem Tirta Sari. Grup tari ini juga dinamakan Legong Lasem, karena mementaskan tari Legong Bali yang paling lengkap atau disebut dengan nama Legong Lasem. Jumlah anggota kelompok tari Tirta Sari terdiri dari 37 musisi dan 21 penari.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <P class="bullet">Untuk tarian Legong di Bali jenis gambelan (alat musik tradisional khas Bali) yang digunakan diberi nama gambelan Semar Pegulingan. Ada beberapa jenis tarian Legong Bali yang dipentaskan oleh kelompok tari Tirta Sari seperti:</P>
         <ulcircle>
           <li>Legong Lasem (versi lengkap)</li>
@@ -78,10 +91,10 @@
           <li>Legong Untung Surapati (tari kreasi baru)</li>
         </ulcircle>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Jadwal & Harga Tiket Pertunjukan Tirta Sari Legong</h2>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p class="bullet">Jika ingin menonton tari Tirta Sari Legong di Peliatan Ubud, mohon di catat, pertunjukan tari Tirta Sari Legong hanya di pentaskan pada hari Jumat. Jadi tidak setiap hari ada pertunjukan tari Tirta Sari Legong di Peliatan Ubud.</p>
         <ulcircle>
           <li>Setiap hari Jumat</li>
@@ -89,7 +102,7 @@
           <li>Harga tiket pertunjukan tari Legong Tirtasari, Rp 100.000 / orang</li>
         </ulcircle>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h3 class="bullet">Program Pertunjukan Tirta Sari Legong</h3>
         <ol>
           <li style="text-align: left;"> Musik instrumental pembuka, judul musik Sekar Gendot</li>
@@ -105,20 +118,20 @@
           <li style="text-align: left;"> Tari Barong Taru Pramana</li>
         </ol>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Program pertujukan tari kelompok Tirta Sari Legong dapat berubah sewaktu-waktu, semuanya tergantung dari ketersediaan penari saat itu. Jadi bisa saja saat anda berkunjung menonton kelompok Tirta Sari Legong di Peliatan, salah satu tarian tidak di pertunjukan.</p>
         <p>Jika anda ingin menonton pertujukan Tirta Sari Legong tapi tidak pada hari Jumat, anda dapat menonton pertunjukan tari Tirta Sari Legong di Hotel Oberoi Seminyak setiap sabtu. Kelompok tari Legong Lasem Tirta Sari, telah melakukan pertujukan di Hotel Oberoi Seminyak setiap sabtu, hampir dalam kurun waktu 25 tahun.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Cara Menuju Lokasi Pertujukan Tari Legong Lasem Tirta Sari</h2>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Tirta Sari Legong 1.jpg" class="big">
+      <section><img src="images/Tirta Sari Legong 1.jpg" class="big">
         <p>Untuk menuju lokasi Balerung Stage Peliatan ada banyak cara yang dapat anda lakukan. Jika anda menginap di Ubud selama liburan di Bali, tentunya tidak akan susah untuk mencari lokasi Balerung Stage Peliatan. Menggunakan taksi adakah cara terbaik jika anda menginap di Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Bagi yang menginap di kawasan wisata di Bali yang lain seperti objek wisata Kuta, maka menggunakan taksi bukan pilihan yang tepat. Karena taksi menggunakan argo meter dan akan membuat budget transfortasi selama liburan menjadi mahal. Cara terbaik untuk menuju lokasi Balerung Stage Peliatan, jika menginap di Kuta adalah menggunakan jasa sewa mobil dengan sopir di Kuta Bali. Dengan menggunakan jasa sewa mobil + driver di Bali, wisatawan dapat menyewa selama 10 jam dengan harga yang terjangkau. Selain itu supir akan menunggu sampai pertunjukan selesai. Jadi tidak perlu memikirkan saranan transfortasi Balik ke hotel.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Selain itu, jika menggunakan sewa mobil plus sopir di Bali, selain menonton pertunjukan tari Legong Lasem Tirta Sari, anda juga dapat berwisata ke tempat wisata di Ubud yang lain, seperti monkey forest Ubud dan wisata kuliner ke restoran bebek Bengil Ubud.</p>
       </section>
     </article>
