--- a/public html/14. Museum Puri Lukisan Ubud.html
+++ b/public html/14. Museum Puri Lukisan Ubud.html
@@ -14,11 +14,11 @@
     <nav role="navigation" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="introduction.html" class="navbar-brand">Wisata Ubud Bali</a>
         </div>
         <div id="presentation-chooser" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 1<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
                 <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
@@ -30,9 +30,22 @@
                 <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
                 <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
                 <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 2<b class="caret"></b></a>
+              <ul class="dropdown-menu">
                 <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
                 <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
-                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong </a></li>
+                <li><a href="14. Museum Puri Lukisan Ubud.html">Museum Puri Lukisan Ubud</a></li>
+                <li><a href="15. Pura Gunung Lebah.html">Pura Gunung Lebah</a></li>
+                <li><a href="16. Museum Neka Ubud Bali.html">Museum Neka Ubud Bali</a></li>
+                <li><a href="17. Museum Blanco Ubud.html">Museum Blanco Ubud</a></li>
+                <li><a href="18. Legong Mahabharata.html">Legong Mahabharata</a></li>
+                <li><a href="19. Yeh Pulu Relief.html">Yeh Pulu Relief</a></li>
+                <li><a href="20. Tari Barong Ubud.html">Tari Barong Ubud</a></li>
               </ul>
             </li>
           </ul>
@@ -40,29 +53,29 @@
       </div>
     </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h1>Museum Puri Lukisan Ubud</h1><img src="images/Museum-Puri-Lukisan-Ubud.jpg" height="250" width="600" class="big">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+      <section>       
         <p>Tempat wisata Ubud sangat terkenal akan wisata kesenian dan budaya, dan merupakan pusat dari lokasi museum di Bali. Museum seni yang ada di Ubud seperti adalah museum lukisan seperti Arma museum, museum Neka dan museum Puri Lukisan Ubud.
           <P>Museum Puri Lukisan Ubud, merupakan museum tertua yang ada di Bali, museum ini lebih mengkhusus akan karya seni lukis Bali traditional dan modern, serta seni ukir dan mengkhusus ke ukiran kayu. </P>
         </p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Museum Puri Lukisan Ubud, merupakan museum tertua yang ada di Bali, museum ini lebih mengkhusus akan karya seni lukis Bali traditional dan modern, serta seni ukir dan mengkhusus ke ukiran kayu.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/museum-puri-lukisan-di-ubud.jpg" height="300" width="500" class="big">
+      <section><img src="images/museum-puri-lukisan-di-ubud.jpg" height="300" width="500" class="big">
         <h3>Lokasi Museum Puri Lukisan Ubud</h3>
         <p> Tentunya anda ingin tahu letak lokasi dari museum Puri Lukisan di Ubud. Lokasinya berada di jalan Raya Ubud. Sangat dekat dengan lokasinya dari puri Ubud dan pasar seni Ubud, jaraknya sekitar 300 meter ke barat. Untuk melihat peta lokasi silakan klik link ini. Lokasi Museum Puri Lukisan Di Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Museum ini buka dari jam 09:00 - 18:00 (waktu Bali) dan buka setiap hari, kecuali pada hari raya Nyepi. Tiket masuk akan dikenakan sebesar Rp 75.000 per orang dewasa. Harga tiket masuk sudah termasuk minuman yang menyegarkan dan kue. Untuk anak-anak yang berumur di bawah 15 tahun dan ditemani oleh orang tua, tidak akan dikenakan biaya tiket masuk.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Kolesi Seni Museum Puri Lukisan</h2>
         <p>Karya seni di museum ini diletakkan di empat bangunan berbeda di komplek museum. Untuk dapat melihat semua hasil seni di museum ini, setidaknya anda harus meluangkan waktu kurang lebih 2 jam. Koleksi lukisan mulai dari gaya lukis Batuan, gaya lukis Sanur, gaya lukis Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/puri-lukisan-museum-ubud.jpg"></section>
+      <section><img src="images/puri-lukisan-museum-ubud.jpg"></section>
     </article>
   </body>
   <script src="build/build.js"></script>
