--- a/public html/19. Yeh Pulu Relief.html
+++ b/public html/19. Yeh Pulu Relief.html
@@ -14,11 +14,11 @@
     <nav role="navigation" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="introduction.html" class="navbar-brand">Wisata Ubud Bali</a>
         </div>
         <div id="presentation-chooser" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 1<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
                 <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
@@ -30,9 +30,22 @@
                 <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
                 <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
                 <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 2<b class="caret"></b></a>
+              <ul class="dropdown-menu">
                 <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
                 <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
-                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong </a></li>
+                <li><a href="14. Museum Puri Lukisan Ubud.html">Museum Puri Lukisan Ubud</a></li>
+                <li><a href="15. Pura Gunung Lebah.html">Pura Gunung Lebah</a></li>
+                <li><a href="16. Museum Neka Ubud Bali.html">Museum Neka Ubud Bali</a></li>
+                <li><a href="17. Museum Blanco Ubud.html">Museum Blanco Ubud</a></li>
+                <li><a href="18. Legong Mahabharata.html">Legong Mahabharata</a></li>
+                <li><a href="19. Yeh Pulu Relief.html">Yeh Pulu Relief</a></li>
+                <li><a href="20. Tari Barong Ubud.html">Tari Barong Ubud</a></li>
               </ul>
             </li>
           </ul>
@@ -52,29 +65,29 @@
       <section>
         <p>Lokasi dari objek wisata Yeh Pulu Bali, berada di desa Bedulu, Kecamatan Blahbatuh, Kabupaten Gianyar. Karena terletak di desa Bedahulu, pura Yeh Pulu juga sering disebut dengan nama Yeh Pulu Bedulu. Untuk berwisata ke objek wisata Yeh Pulu, anda tidak harus secara khusus meluangkan waktu untuk ke objek wisata di Ubud ini. Karena tempat wisata Yeh Pulu, searah dengan rute Kuta - Denpasar - Ubud - Kintamani.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Rute wisata Kuta - Denpasar - Ubud - Kintamani, salah satu rute favorit wisatawan dalam memilih paket tour Bali. Salah satu yang paling favorit adalah paket tour Ubud Kintamani. Jika anda memang menyukai wisata ke tempat bersejarah, maka pura Goa Gajah jangan anda lewatkan, karena lokasinya berdekatan dengan Yeh Pulu Relief. </p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/yeh-pulu-relief.jpg" height="300" width 600>
+      <section><img src="images/yeh-pulu-relief.jpg" height="300" width 600>
         <p>Yang unik dari lokasi Pura ini, karena terletak di lokasi persawahan. Lokasi persawahaan sangat luas dan tersebar di segala penjuru desa Bedulu. Jadi saat wisata, anda tidak hanya melihat relief sejarah pura, selain itu anda juga akan melihat pemandangan persawahaan yang  tertata rapi.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Untuk mencapai lokasi dari pura ini, anda harus melewati jalanan setapak lumayan kecil. Jalan setapak ini sangat terawat, baik dari sisi kebersihan dan keindahan. Perawatan akan jalan setapak ini, dilakukan oleh masyarakat sekitar yang memiliki organisasi pertanian, dengan nama Subak. Di lokasi objek wisata ini, tersedia sarana tempat parkir, toilet, toko penjual oleh-oleh khas Bali dan jasa pemandu wisata, jika anda ingin tahu lebih tentang sejarah Pura Yeh Pulu Bedulu.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Tempat Wisata Pura Dengan Relief Kuno</h2><img src="images/yeh-pulu-bedulu.jpg" height="300" width="600" class="big">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+      <section>      
         <p>Di objek wisata ini, anda akan dapat melihat banyak relief kuno yang sangat unik. Karena terdapat banyak relief di tempat wisata pura ini, maka tempat wisata ini sering disebut dengan nama relief Yeh Pulu. Relief bersejarah yang terdapat di sini, di pahat pada batu cadas, dan panjang relief sekitar 25 meter dengan lebar relief 2 meter.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Sejarah Pura & Arti Nama Yeh Pulu Bedulu</h2>
         <p>Sejarah relief yang terdapat di lokasi wisata ini, menceritakan tentang sejarah kehidupan masyarakat Bali kuno, pada masa kerajaan Bedahulu. Tidak hanya relief didinding, lubang menjorok kedalam untuk tempat bertapa, juga ada di objek wisata ini. Konon tempat ini digunakan untuk bertapa raja Bedahulu, sebelum beliau kalah berperang melawan kerajaan Majapahit pada tahun 1343.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p> Yeh artinya air dan Pulu artinya gentong yang dulunya digunakan sebagai tempat beras. Gentong ini ditempatkan di bagian barat dari Yeh Pulu relief dan berada tengah tempat air suci. Jika anda menyukai wisata pura di Bali, untuk informasi, salah satu pura di Bali yang paling disukai wisatawan untuk di kunjungi adalah pura Ulun Danu Beratan. Jika anda sempat melihat di brosur atau majalah wisata yang memperlihatkan pura berada di tengah danau, inilah pura Ulun Danu Beratan.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Aktivitas Wisata Alam Ubud</h2>
         <p>Selain wisata ke pura ini, tempat wisata di Ubud Bali, juga menyediakan aktivitas wisata alam yang bersifat petualangan. Wisata petualangan alam di Ubud yang paling disukai wisatawan domestik adalah Bali rafting. Salah satu tempat rafting di Bali yang bersifat rekreasi adalah sungai Ayung Ubud.</p>
         <p>Sungai Ayung Ubud, setiap hari ramai dengan kunjungan wisatawan yang ingin melakukan aktivitas rafting. Salah satu perusahaan yang terkenal dan peritis rafting di Ubud bernama Sobek rafting. Wisatawan domestik saat ini telah menjadikan wisata rafting sebagai salah satu aktivitas wisata di Bali.</p>
