--- a/public html/20. Tari Barong Ubud.html
+++ b/public html/20. Tari Barong Ubud.html
@@ -14,11 +14,11 @@
     <nav role="navigation" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="introduction.html" class="navbar-brand">Wisata Ubud Bali</a>
         </div>
         <div id="presentation-chooser" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 1<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
                 <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
@@ -30,9 +30,22 @@
                 <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
                 <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
                 <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 2<b class="caret"></b></a>
+              <ul class="dropdown-menu">
                 <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
                 <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
-                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong </a></li>
+                <li><a href="14. Museum Puri Lukisan Ubud.html">Museum Puri Lukisan Ubud</a></li>
+                <li><a href="15. Pura Gunung Lebah.html">Pura Gunung Lebah</a></li>
+                <li><a href="16. Museum Neka Ubud Bali.html">Museum Neka Ubud Bali</a></li>
+                <li><a href="17. Museum Blanco Ubud.html">Museum Blanco Ubud</a></li>
+                <li><a href="18. Legong Mahabharata.html">Legong Mahabharata</a></li>
+                <li><a href="19. Yeh Pulu Relief.html">Yeh Pulu Relief</a></li>
+                <li><a href="20. Tari Barong Ubud.html">Tari Barong Ubud</a></li>
               </ul>
             </li>
           </ul>
@@ -40,52 +53,52 @@
       </div>
     </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Tari Barong Ubud</h2><img src="images/TariBarongUbud.jpg" height="300" width="600" class="big">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+      <section>       
         <p>Salah satu objek wisata di Bali yang patut anda kunjungi selama liburan di pulau dewata adalah desa Ubud. Ada beberapa alasan kenapa kami merekomendasi anda untuk berwisata ke Ubud. Hal ini di karenakan, tempat wisata di Ubud memiliki berbagai macam pilihan tempat wisata, baik untuk wisata alam, wisata budaya dan wisata seni, khususnya seni lukis dan seni tari seperti tari Barong Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Ubud sangat terkenal akan wisata alam seperti aktivitas rafting di sungai Ayung Ubud, wisata ke museum seni lukis atau menonton pertunjukan seni tari, yang hampir setiap hari diadakan di berbagai tempat di objek wisata Ubud. Saking terkenalnya objek wisata Ubud, baik di kalangan wisatawan domestik dan wisatawan mancanegara, membuat Ubud tidak pernah sepi dari kunjungan wisatawan setiap harinya. Hal ini membuat objek wisata Ubud memiliki begitu banyak sarana pariwisata, terutama tempat menginap, baik dari hotel maupun villa.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Para pengusaha travel agent di Bali, juga berlomba menawarkan berbagai macam paket wisata, yang menfokuskan akan paket liburan di Ubud Bali. Kami juga tidak ketinggalan dalam menawarkan paket liburan ke Ubud. Tentunya setiap wisatawan yang berlibur di Bali tidak semua memilih untuk membeli paket wisata ke Ubud, ada banyak wisatawan yang juga memilih untuk wisata di Ubud tanpa membeli paket wisata.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Sebagian dari mereka dalam berwisata di Ubud tentunya akan memerlukan sarana tranfortasi, dan wisatawan sebagian besar akan mengunakan jasa sewa mobil dan driver di Bali. Dengan alasan murah dan tidak perlu memikirkan tempat parkir dan jalanan macet.</p>
       </section>
       <section>
         <h3>Pertunjukan Kesenian Tari Barong Ubud</h3>
         <p>Saat anda wisata di Bali, tentunya anda tidak hanya ingin diam di hotel atau menghabiskan waktu ke shoping mall, tanpa melihat sesuatu yang unik dan hanya ada di Bali, seperti pertujukan kesenian khas tradisional budaya Bali. Salah satu pertunjukan seni yang paling di cari di Ubud adalah pertunjukan tari Barong Ubud dan tari kecak Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Tarian Barong sebuah kesenian tari tradisional di Bali, yang sebagian penarinya menggunakan topeng dan kostum yang menyerupai hewan. Jenis tari Barong yang paling banyak di minati adalah tari Barong Ket. Lalu apa itu Barong Ket?</p>
         <P>Jika di lihat dari bentuknya, Barong Ket merupakan perpaduan bentuk binatang antara harimau, singa, ular naga dan sapi. Seluruh badan dari Barong Ket, dihiasi dengan ukiran tradisional Bali yang berbahan dasar kulit sapi dan dalam ukiran tersebut terdapat puluhan cermin kaca yang berukuran kecil.</P>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Jadi pada saat ada cahaya yang mengenai cermin kaca, membuat wujud dari Barong kelihatan berkilauan. Untuk membuat tampak seperti bintang, maka di Barong Ket anda akan melihat banyak Bulu. Bulu ini terbuat dari serat daun tanaman yang dikeringkan dan biasanya mengunakan daun pandan dan ijuk</p>
         <p>Untuk menarikan Barong Ket diperlukan dua orang penari, kedua penari ini memiliki nama Juru Bapang atau sering juga disebut dengan nama Juru Saluk. Penari di bagian kepala Barong di namai Juru Bapang satu dan penari yang di bagian ekor dinamai Juru Bapang dua. Tentunya pada saat pementasan tarian Barong Ket, juga disertai pementasan tarian Rangda.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Rangda adalah sebuah sosok yang kelihatan sangat seram, karena di gunakan untuk mewakili simbul keburukan. Sedangakan Barong Ket adalah sibul kebajikan. Oleh karena itu, setiap pementasan tarian Barong Ket, pastinya akan ada pementasan Rangda. Hal ini meyimbulkan perbedaan abadi antara kebajikan dan keburukan.</p>
         <p>Untuk mengiringi tari Barong di Ubud digunakan musik traditional Bali yang disebut dengan nama Gambelan. Jenis Gambelan yang digunakan adalah Gamelan Semar Pegulingan. Bagi yang pertama kali mendengar musik Gambelan Semar pegulingan, pastinya akan terdengar aneh di telinga, tapi setelah anda melihat penari yang bergerak mengikuti irama musik Gambelan, anda pastinya akan terbiasa.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Apakah Di Anjurkan Menonton Bersama Anak?</h2>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Jika anda liburan di Bali bersama keluarga dan anak-anak, sebelum memutuskan untuk menonton tari Barong Ubud, sebaiknya anda tanyakan dulu kepada anak, apakah mereka berani untuk menonton tari Barong Ubud atau tidak? Caranya dengan menunjukan contoh tarian Barong Ubud melalui media internet di Youtube. Dengan cara ini anda akan tahu, apakah anak anda berani menonton tari barong atau tidak. Jika anak anda tidak berani, maka anda tidak rugi telah membayar tiket masuk tari Barong Ubud, kemudian harus meninggalkan pertujukan tarian barong karena anak anda tidak berani menonton.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Jika anda liburan di Bali bersama keluarga dan anak-anak, sebelum memutuskan untuk menonton tari Barong Ubud, sebaiknya anda tanyakan dulu kepada anak, apakah mereka berani untuk menonton tari Barong Ubud atau tidak? Caranya dengan menunjukan contoh tarian Barong Ubud melalui media internet di Youtube. Dengan cara ini anda akan tahu, apakah anak anda berani menonton tari barong atau tidak. Jika anak anda tidak berani, maka anda tidak rugi telah membayar tiket masuk tari Barong Ubud, kemudian harus meninggalkan pertujukan tarian barong karena anak anda tidak berani menonton.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Jadwal Tari Barong Di Ubud Bali</h2>
         <p>Untuk pementasan tari Barong Ubud, tidak setiap hari diadakan, bagi yang ingin menonton tari barong yang diadakan setiap hari, maka anda harus menonton di daerah Batubulan. Untuk jadwal pementasan tarian Barong Ubud, dapat anda lihat di tabel di bawah.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <table border="0" cellpadding="5" cellspacing="10">
+      <section>
+        <table class="zebra-table">
           <tr align="left">
             <td>Hari</td>
             <td>Lokasi</td>
@@ -117,9 +130,9 @@
             <td>Rp 80.000</td>
           </tr>
         </table>
-        <p>Catatan: Harga Tiket Pertunjukan Tari Barong Di Ubud, Sewaktu-waktu Dapat Berubah.</p>
+        <p><br>Catatan: Harga Tiket Pertunjukan Tari Barong Di Ubud, Sewaktu-waktu Dapat Berubah.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Jika anda ingin menonton tarian Barong di Bali dan tidak berencana sebelumnya, sebaiknya tanyakan terlebih dahulu mengenai lokasi pementasan dan harga tiket ke supir yang mengantar anda atau melalui media informasi yang disediakan di tempat anda menginap.</p>
       </section>
     </article>
