--- a/public html/7. Sawah Terasering Ubud.html
+++ b/public html/7. Sawah Terasering Ubud.html
@@ -14,11 +14,11 @@
     <nav role="navigation" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="introduction.html" class="navbar-brand">Wisata Ubud Bali</a>
         </div>
         <div id="presentation-chooser" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 1<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
                 <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
@@ -30,9 +30,22 @@
                 <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
                 <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
                 <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata 2<b class="caret"></b></a>
+              <ul class="dropdown-menu">
                 <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
                 <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
-                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong </a></li>
+                <li><a href="14. Museum Puri Lukisan Ubud.html">Museum Puri Lukisan Ubud</a></li>
+                <li><a href="15. Pura Gunung Lebah.html">Pura Gunung Lebah</a></li>
+                <li><a href="16. Museum Neka Ubud Bali.html">Museum Neka Ubud Bali</a></li>
+                <li><a href="17. Museum Blanco Ubud.html">Museum Blanco Ubud</a></li>
+                <li><a href="18. Legong Mahabharata.html">Legong Mahabharata</a></li>
+                <li><a href="19. Yeh Pulu Relief.html">Yeh Pulu Relief</a></li>
+                <li><a href="20. Tari Barong Ubud.html">Tari Barong Ubud</a></li>
               </ul>
             </li>
           </ul>
@@ -43,7 +56,7 @@
       <section>
         <h1>Sawah Terasering Ubud</h1><img src="images/Sawah-Terasering-Ubud.jpg" height="300" width="600">
       </section>
-      <section> 
+      <section>
         <h2>Indahnya Pemandangan Hijau Persawahan       </h2>
         <p>Pulau Bali, banyak memiliki areal persawahan, tapi tidak semua daerah di Bali, memiliki sawah terasering. Untuk melihat sawah terasering di Bali yang memiliki pemandangan bagus, ada di beberapa tempat, yaitu Jatiluwih Tabanan, Pupuan Tabanan, Antosari (pantai Soka), Busung Biu Buleleng, Tirta Gangga Karangasem dan Tegalalang Ubud.</p>
       </section>
