edit tarik kecak

--- a/public html/4. Tari Kecak Ubud.html
+++ b/public html/4. Tari Kecak Ubud.html
@@ -65,7 +65,7 @@
       </section>
       <Section>
         <h3>Hari Minggu</h3>
-        <table border="0" cellpadding="5" cellspacing="10">
+        <table class="zebra-table">
           <tr align="left">
             <td>Lokasi Pentas</td>
             <td>Jam</td>
@@ -79,10 +79,6 @@
             <td>Rp. 75.000,-</td>
           </tr>
           <tr align="left">
-            <td></td>
-            <td></td>
-          </tr>
-          <tr align="left">
             <td>Pura Batukaru</td>
             <td>19:30</td>
             <td>Desa Adat Sambahan </td>
@@ -92,7 +88,7 @@
       </Section>
       <Section>
         <h3>Hari Senin</h3>
-        <table border="0" cellpadding="5" cellspacing="10">
+        <table class="zebra-table">
           <tr align="left">
             <td>Lokasi Pentas</td>
             <td>Jam</td>
@@ -115,7 +111,7 @@
       </Section>
       <Section>
         <h3>Hari Selasa</h3>
-        <table border="0" cellpadding="5" cellspacing="10">
+        <table class="zebra-table">
           <tr align="left">
             <td>Lokasi Pentas</td>
             <td>Jam</td>
@@ -132,7 +128,7 @@
       </Section>
       <Section>
         <h3>Hari Rabu</h3>
-        <table border="0" cellpadding="5" cellspacing="10">
+        <table class="zebra-table">
           <tr align="left">
             <td>Lokasi Pentas</td>
             <td>Jam</td>
@@ -161,7 +157,7 @@
       </Section>
       <Section>
         <h3>Hari Kamis</h3>
-        <table border="0" cellpadding="5" cellspacing="10">
+        <table class="zebra-table">
           <tr align="left">
             <td>Lokasi Pentas</td>
             <td>Jam</td>
@@ -190,7 +186,7 @@
       </Section>
       <Section>
         <h3>Hari Jumat</h3>
-        <table border="0" cellpadding="5" cellspacing="10">
+        <table class="zebra-table">
           <tr align="left">
             <td>Lokasi Pentas</td>
             <td>Jam</td>
@@ -213,7 +209,7 @@
       </Section>
       <Section>
         <h3>Hari Sabtu</h3>
-        <table border="0" cellpadding="5" cellspacing="10">
+        <table class="zebra-table">
           <tr align="left">
             <td>Lokasi Pentas</td>
             <td>Jam</td>
