--- a/public html/15. Pura Gunung Lebah.html
+++ b/public html/15. Pura Gunung Lebah.html
@@ -88,11 +88,10 @@
       </section>
       <section>
         <p>Saat anda wisata di Bali dan menginap di Ubud, maka menggunakan taksi salah satu cara terbaik untuk berkunjung ke pura ini. Lalu jika anda tidak menginap di Ubud saat wisata di Bali, maka menggunakan taksi bukanlah pilihan yang tepat. Karena biaya transfortasi akan menjadi mahal.</p>
-        <p>Untuk wisata di Ubud, bagi yang tidak menginap di Ubud, menggunakan jasa sewa mobil + driver di Bali adalah cara terbaik. Karena driver anda akan menunggu dan anda tidak membayar berdasarkan argo tapi durasi pemakaian. Selain itu, anda tidak perlu memikirkan akan mencari tempat parkir.</p>
+        <p>Untuk wisata di Ubud, bagi yang tidak menginap di Ubud, menggunakan jasa sewa mobil + driver di Bali adalah cara terbaik. Karena driver anda akan menunggu dan anda tidak membayar berdasarkan argo tapi durasi pemakaian. Selain itu, tidak perlu memikirkan akan mencari tempat parkir.</p>
       </section>
       <section>
         <p>Kelebihan lain mengunakan jasa sewa mobil plus sopir di Bali, selain biaya yang lebih murah serta durasi pemakaian yang lebih lama. Selama waktu penggunaan, anda dapat mengunjungi tempat wisata di Ubud yang lain, seperti Monkey Forest Ubud.</p>
-        <p>Jika anda berencana untuk datang menggunakan kendaran sendiri, tentunya anda akan memerlukan peta pentunjuk arak untuk mencari lokasi dari pura ini. Klik disini untuk melihat peta lokasi dari Pura Gunung Lebah Campuhan.</p>
       </section>
     </article>
   </body>
